Port to ReadDirectoryChangesW

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -160,6 +160,7 @@
         "stdfloat": "cpp",
         "knotification": "cpp",
         "qfile": "cpp",
-        "qsharedpointer": "cpp"
+        "qsharedpointer": "cpp",
+        "qlocalsocket": "cpp"
     }
 }
