Complete the watcher class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -161,6 +161,7 @@
         "knotification": "cpp",
         "qfile": "cpp",
         "qsharedpointer": "cpp",
-        "qlocalsocket": "cpp"
+        "qlocalsocket": "cpp",
+        "qthread": "cpp"
     }
 }
