Almost add all gui components and screens

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -162,6 +162,7 @@
         "qfile": "cpp",
         "qsharedpointer": "cpp",
         "qlocalsocket": "cpp",
-        "qthread": "cpp"
+        "qthread": "cpp",
+        "qstackedwidget": "cpp"
     }
 }
