--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -163,6 +163,7 @@
         "qsharedpointer": "cpp",
         "qlocalsocket": "cpp",
         "qthread": "cpp",
-        "qstackedwidget": "cpp"
+        "qstackedwidget": "cpp",
+        "qprogressbar": "cpp"
     }
 }
