Make the process and structure better

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -164,6 +164,7 @@
         "qlocalsocket": "cpp",
         "qthread": "cpp",
         "qstackedwidget": "cpp",
-        "qprogressbar": "cpp"
+        "qprogressbar": "cpp",
+        "qfiledialog": "cpp"
     }
 }
